--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.15",
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
